# claude-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  claude-sync-mcp.py  claude-sync.py  install.sh  manifest.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
ClaudeSync/: project.yml
ClaudeSync/ClaudeSync/: ClaudeSyncApp.swift  Info.plist
ClaudeSync/ClaudeSync.xcodeproj/: project.pbxproj
ClaudeSync/ClaudeSync.xcodeproj/project.xcworkspace/xcuserdata/ryders.xcuserdatad/: UserInterfaceState.xcuserstate
ClaudeSync/ClaudeSync.xcodeproj/xcuserdata/ryders.xcuserdatad/xcschemes/: xcschememanagement.plist
ClaudeSync/ClaudeSync/Models/: ActivityLog.swift  ConfigFile.swift  Peer.swift  SyncConfig.swift  SyncMessage.swift  SyncStatus.swift
ClaudeSync/ClaudeSync/Networking/: MessageFramer.swift  RelayConnection.swift  ServiceAdvertiser.swift  ServiceBrowser.swift  SyncConnection.swift  SyncProtocol.swift  TrackerClient.swift
ClaudeSync/ClaudeSync/Security/: CertificateManager.swift  PairingManager.swift  TrustStore.swift
ClaudeSync/ClaudeSync/Services/: ConfigScanner.swift  ConflictResolver.swift  ConnectionPool.swift  DiffEngine.swift  FileWatcher.swift  NetworkManager.swift  SettingsMerger.swift  SyncEngine.swift
ClaudeSync/ClaudeSync/Utilities/: DeviceIdentity.swift  FileHasher.swift
ClaudeSync/ClaudeSync/Views/: ActivityView.swift  DashboardView.swift  DiffView.swift  MenuBarView.swift  PeerDetailView.swift  PeerListView.swift  SettingsView.swift
Formula/: claude-sync.rb
claude/: CLAUDE.md  settings.json
claude-sync-app/: index.html  package.json  tsconfig.json  vite.config.ts
claude-sync-app/src/: main.ts  styles.css
claude-sync-app/src-tauri/: Cargo.toml  tauri.conf.json
claude-sync-app/src-tauri/icons/: icon.icns
claude-sync-app/src-tauri/src/: config_scanner.rs  conflict_resolver.rs  connection.rs  device_identity.rs  diff_engine.rs  discovery.rs  file_watcher.rs  lib.rs  main.rs  protocol.rs  settings_merger.rs  sync_config.rs  sync_engine.rs  tracker_client.rs
claude-sync-app/src-tauri/src/security/: certificate.rs  mod.rs  pairing.rs  trust_store.rs
claude-sync-app/src/components/: auto-sync-panel.ts  diff-viewer.ts  peer-list.ts  settings-panel.ts  sync-panel.ts
claude-sync-app/src/lib/: tauri-bridge.ts  types.ts
claude-sync-tracker/: Cargo.toml
claude-sync-tracker/src/: main.rs  protocol.rs  registry.rs  relay.rs  server.rs
claude/agents/: apple-dev-expert.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  config-sync-agent.md  context-query-agent.md  plugin-packager-agent.md  rp-explorer.md  skill-catalog-agent.md  swiftui-design-system-debugger.md
claude/hooks/: post-tool-use-tracker.sh
claude/rules/: agent-orchestration.md  continuity.md  explicit-identity.md  git-commits.md  hooks.md  idempotent-redundancy.md  index-at-creation.md  mcp-scripts.md  observe-before-editing.md  search-tools.md  skill-development.md
claude/scripts/: artifact_index.py  artifact_mark.py  artifact_query.py  ast_grep_find.py  braintrust_analyze.py  firecrawl_scrape.py  github_search.py  morph_apply.py  morph_search.py  multi_tool_pipeline.py  nia_docs.py  perplexity_search.py  qlty_check.py  repoprompt_async.py  typescript_check.py
claude/skills/: skill-rules.json
claude/skills/catalog/: SKILL.md
claude/skills/export-plugin/: SKILL.md
claude/skills/frontend-debug/: README.md  SKILL.md
claude/skills/new-agent/: SKILL.md
claude/skills/new-skill/: SKILL.md
claude/skills/sync/: SKILL.md
claude/skills/xcode-build/: SKILL.md
claude/skills/xcode-clean/: SKILL.md
claude/skills/xcode-launch/: SKILL.md
claude/skills/xcode-logs/: SKILL.md
claude/skills/xcode-screenshot/: SKILL.md
claude/skills/xcode-test/: SKILL.md
claude/skills/xcode-workflow/: SKILL.md
claude_sync/: __init__.py  cli.py
docs/: ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  PLUGIN-COMPAT.md  PROTOCOL.md
scripts/: enrich-skills.py
templates/: claude-sync-watch.service  com.claude-sync.watch.plist  env.template  mcp_config.template.json  plugins.txt  settings.portable.json
tests/: conftest.py  test_backup_manager.py  test_diff_engine.py  test_doctor.py  test_file_hasher.py  test_genome.py  test_manifest.py  test_path_resolver.py  test_secret_scanner.py  test_settings_merger.py  test_sync_engine.py
wiki/: index.md
wiki/concepts/: architecture.md  evolution-timeline.md  mcp-server.md  platform-features.md  secret-scanner.md  skill-genome.md  three-way-merge.md  worksets.md
