[package]
name = "claude-sync-tracker"
version = "0.1.0"
edition = "2021"
description = "Self-hostable tracker server for Claude Sync cross-network peering"

[[bin]]
name = "claude-sync-tracker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
