[package]
name = "claude-sync-app"
version = "0.1.0"
description = "Peer-to-peer LAN config sync for Claude Code"
authors = ["Claude Sync"]
edition = "2021"

[lib]
name = "claude_sync_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"               # Cross-platform mDNS (no Bonjour dependency)
flume = "0.11"                 # Channel type used by mdns-sd (for recv_timeout error matching)
sha2 = "0.10"
base64 = "0.22"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
hostname = "0.4"
log = "0.4"
env_logger = "0.11"
