[package]
name = "claude-sync-app"
version = "0.1.0"
description = "Peer-to-peer LAN config sync for Claude Code"
authors = ["Claude Sync"]
edition = "2021"

[lib]
name = "claude_sync_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"               # Cross-platform mDNS (no Bonjour dependency)
flume = "0.11"                 # Channel type used by mdns-sd (for recv_timeout error matching)
sha2 = "0.10"
base64 = "0.22"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
hostname = "0.4"
log = "0.4"
env_logger = "0.11"
notify = "7"                   # Cross-platform file system watching (OS-native events)
chrono = "0.4"                 # Timestamp handling for change_epoch_ms
rustls = "0.23"                # TLS for WAN peer connections
rcgen = "0.13"                 # Self-signed certificate generation
tokio-rustls = "0.26"          # Async TLS integration with tokio
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }  # WebSocket client for tracker
ring = "0.17"                  # Cryptographic primitives (SHA-256 fingerprinting)
x509-parser = "0.16"           # Parse X.509 certificates for fingerprint extraction
rand = "0.8"                   # Random number generation for pairing codes
time = "0.3"                   # Date/time types for X.509 certificate validity
futures = "0.3"                # Async stream utilities (SplitSink/SplitStream for WebSocket)
rustls-pemfile = "2"           # PEM file parsing for certificate loading
